refactor: small fix

--- a/fastid/templates/email/signup.html
+++ b/fastid/templates/email/signup.html
@@ -1,6 +1,6 @@
 {% extends "template.html" %}
 {% block title %}
-    {% if lang == "ru" %}Код подтверждения на jobs.su{% else %}Confirmation code on jobs.su{% endif %}
+    Confirmation code on {{ app_name }}
 {% endblock %}
 {% block body %}
     <br>
